sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:13: error: identifier expected but integer literal found.
      if (tab[i+1] > tab[i]){
                ^AlgBubbleSort1:19: error: ']' expected but '}' found.
    }
    ^